--- a/XamarinForms_Udemy/XamarinForms_Udemy.csproj
+++ b/XamarinForms_Udemy/XamarinForms_Udemy.csproj
@@ -59,9 +59,16 @@
     <Compile Include="ImageEx.xaml.cs">
       <DependentUpon>ImageEx.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ListEx.xaml.cs">
+      <DependentUpon>ListEx.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Search.cs" />
+    <Compile Include="Models\SearchGroup.cs" />
     <Compile Include="RelativeLayoutEx.xaml.cs">
       <DependentUpon>RelativeLayoutEx.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Service\Interface\ISearchService.cs" />
+    <Compile Include="Service\SearchService.cs" />
     <Compile Include="XamarinForms_UdemyPage.xaml.cs">
       <DependentUpon>XamarinForms_UdemyPage.xaml</DependentUpon>
     </Compile>
@@ -122,6 +129,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ImageEx.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ListEx.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
